--- a/.gitignore
+++ b/.gitignore
@@ -360,6 +360,7 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
-**/.idea/**/*.iml
-**/.idea/**/contentModel.xml
-**/.idea/**/modules.xml
+
+# JetBrains Rider
+.idea/
+*.sln.iml
