--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,4 +1,5 @@
 {
+  "DbConnection": "Host=localhost;Port=5432;Database=HotelDB;Username=postgres;Password=12345",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
